--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,11 +25,6 @@
             android:id="@+id/action_loginFragment_to_registrationFragment"
             app:destination="@id/registrationFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_mainFragment"
-            app:destination="@id/mainFragment"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_loginFragment_to_userProfileFragment"
             app:destination="@id/userProfileFragment"
             app:popUpTo="@id/loginFragment"
@@ -37,17 +32,17 @@
         <action
             android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
             app:destination="@id/forgotPasswordFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_dashBoardFragment"
+            app:destination="@id/dashBoardFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
         android:name="com.example.myshop.presentation.ui.fragments.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" />
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
     <fragment
         android:id="@+id/userProfileFragment"
         android:name="com.example.myshop.presentation.ui.fragments.UserProfileFragment"
@@ -57,8 +52,8 @@
             android:name="users"
             app:argType="com.example.myshop.domain.models.Users" />
         <action
-            android:id="@+id/action_userProfileFragment_to_mainFragment"
-            app:destination="@id/mainFragment"
+            android:id="@+id/action_userProfileFragment_to_dashBoardFragment"
+            app:destination="@id/dashBoardFragment"
             app:popUpTo="@id/userProfileFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -67,4 +62,19 @@
         android:name="com.example.myshop.presentation.ui.fragments.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
         tools:layout="@layout/fragment_forgot_password" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/dashBoardFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.DashBoardFragment"
+        android:label="fragment_dash_board"
+        tools:layout="@layout/fragment_dash_board" />
+    <fragment
+        android:id="@+id/notificationFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.NotificationFragment"
+        android:label="fragment_notification"
+        tools:layout="@layout/fragment_notification" />
 </navigation>
