--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -18,14 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
 
-       <com.google.android.material.textview.MaterialTextView
-             android:layout_width="wrap_content"
-             android:text="DashBoard"
-           android:textColor="@color/white"
-           android:textSize="20sp"
-           android:textStyle="bold"
-             android:layout_height="wrap_content"/>
-
             <ImageButton
                 android:id="@+id/settings"
                 android:backgroundTint="#5F79FA"
@@ -35,14 +27,23 @@
                 android:layout_height="wrap_content"
                 tools:ignore="RtlHardcoded" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:text="Products"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"/>
+
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
+
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dash"
+        android:text="home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
