--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -70,6 +70,10 @@
         <action
             android:id="@+id/action_productsFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_productsFragment_to_addProductsFragment"
+            app:destination="@id/addProductsFragment" />
+
     </fragment>
     <fragment
         android:id="@+id/dashBoardFragment"
@@ -79,6 +83,9 @@
         <action
             android:id="@+id/action_dashBoardFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_dashBoardFragment_to_descriptionProductFragment"
+            app:destination="@id/descriptionProductFragment" />
     </fragment>
     <fragment
         android:id="@+id/ordersFragment"
@@ -104,5 +111,30 @@
             app:destination="@id/userProfileFragment"
             app:popUpTo="@id/settingsFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/addProductsFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.AddProductsFragment"
+        android:label="fragment_add_products"
+        tools:layout="@layout/fragment_add_products" >
+        <action
+            android:id="@+id/action_addProductsFragment_to_productsFragment"
+            app:destination="@id/productsFragment"
+            app:popUpTo="@id/addProductsFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/descriptionProductFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.DescriptionProductFragment"
+        android:label="fragment_description_product"
+        tools:layout="@layout/fragment_description_product" >
+        <action
+            android:id="@+id/action_descriptionProductFragment_to_dashBoardFragment"
+            app:destination="@id/dashBoardFragment"
+            app:popUpTo="@id/descriptionProductFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="products"
+            app:argType="com.example.myshop.domain.models.Products" />
     </fragment>
 </navigation>
