--- a/app/src/main/res/layout/all_products_items.xml
+++ b/app/src/main/res/layout/all_products_items.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
-        android:id="@+id/tvDescriptions"
+        android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
