--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -136,5 +136,17 @@
         <argument
             android:name="products"
             app:argType="com.example.myshop.domain.models.Products" />
+        <action
+            android:id="@+id/action_descriptionProductFragment_to_myCartFragment"
+            app:destination="@id/myCartFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/myCartFragment"
+        android:name="com.example.myshop.MyCartFragment"
+        android:label="fragment_my_cart"
+        tools:layout="@layout/fragment_my_cart" >
+        <action
+            android:id="@+id/action_myCartFragment_to_descriptionProductFragment"
+            app:destination="@id/descriptionProductFragment" />
     </fragment>
 </navigation>
