--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -73,6 +73,9 @@
         <action
             android:id="@+id/action_productsFragment_to_addProductsFragment"
             app:destination="@id/addProductsFragment" />
+        <action
+            android:id="@+id/action_productsFragment_to_myCartFragment"
+            app:destination="@id/myCartFragment" />
 
     </fragment>
     <fragment
@@ -142,11 +145,14 @@
     </fragment>
     <fragment
         android:id="@+id/myCartFragment"
-        android:name="com.example.myshop.MyCartFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.MyCartFragment"
         android:label="fragment_my_cart"
         tools:layout="@layout/fragment_my_cart" >
         <action
             android:id="@+id/action_myCartFragment_to_descriptionProductFragment"
             app:destination="@id/descriptionProductFragment" />
+        <action
+            android:id="@+id/action_myCartFragment_to_productsFragment"
+            app:destination="@id/productsFragment" />
     </fragment>
 </navigation>
