--- a/app/src/main/res/layout/fragment_checkout_order.xml
+++ b/app/src/main/res/layout/fragment_checkout_order.xml
@@ -70,71 +70,19 @@
 
     </LinearLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraint"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvProducts"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="132dp"
                     android:layout_below="@id/linearLayout1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-
-                    <ImageView
-                        android:id="@+id/ivProduct"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_launcher_foreground" />
-
-                    <TextView
-                        android:id="@+id/tvQuantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:background="@drawable/item_border"
-                        android:padding="8dp"
-                        android:text="20"
-                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
-                        app:layout_constraintEnd_toEndOf="parent" />
-
-                    <LinearLayout
-                        android:id="@+id/linearLayout7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:orientation="vertical"
-                        app:layout_constraintBottom_toBottomOf="@+id/ivProduct"
-                        app:layout_constraintStart_toEndOf="@+id/ivProduct"
-                        app:layout_constraintTop_toTopOf="@+id/ivProduct">
-
-                        <TextView
-                            android:id="@+id/tvTitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
-                            android:text="My products"
-                            android:textColor="#373535"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvPrice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="1234" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#B6B6B6"
-                    android:layout_below="@+id/constraint"
+                    android:layout_below="@+id/rvProducts"
                     android:orientation="horizontal"
                     android:padding="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -226,22 +174,23 @@
                     <TextView
                         android:id="@+id/tvSubtotal"
                         android:layout_width="wrap_content"
-                        android:layout_margin="8dp"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="245$" />
 
                     <TextView
                         android:id="@+id/tvShippingCharge"
-                        android:layout_margin="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="10$" />
 
                     <TextView
                         android:id="@+id/tvTotalAmount"
-                        android:layout_margin="8dp"
+                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="1232$" />
 
                 </LinearLayout>
