--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.SplashFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.splash.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
@@ -18,7 +18,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.LoginFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -40,12 +40,12 @@
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.RegistrationFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.registration.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" />
     <fragment
         android:id="@+id/userProfileFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.UserProfileFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.user_profile.UserProfileFragment"
         android:label="fragment_user_profile"
         tools:layout="@layout/fragment_user_profile" >
         <argument
@@ -59,12 +59,12 @@
     </fragment>
     <fragment
         android:id="@+id/forgotPasswordFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.ForgotPasswordFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.forgot_password.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
         tools:layout="@layout/fragment_forgot_password" />
     <fragment
         android:id="@+id/productsFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.ProductsFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.products.ProductsFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_products" >
         <action
@@ -80,7 +80,7 @@
     </fragment>
     <fragment
         android:id="@+id/dashBoardFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.DashBoardFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.dashboard.DashBoardFragment"
         android:label="fragment_dash_board"
         tools:layout="@layout/fragment_dash_board" >
         <action
@@ -92,7 +92,7 @@
     </fragment>
     <fragment
         android:id="@+id/ordersFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.OrdersFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.orders.OrdersFragment"
         android:label="fragment_notification"
         tools:layout="@layout/fragment_orders" >
         <action
@@ -101,7 +101,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.SettingsFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.settings.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" >
         <action
@@ -117,7 +117,7 @@
     </fragment>
     <fragment
         android:id="@+id/addProductsFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.AddProductsFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.add_products.AddProductsFragment"
         android:label="fragment_add_products"
         tools:layout="@layout/fragment_add_products" >
         <action
@@ -128,7 +128,7 @@
     </fragment>
     <fragment
         android:id="@+id/descriptionProductFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.DescriptionProductFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.description_products.DescriptionProductFragment"
         android:label="fragment_description_product"
         tools:layout="@layout/fragment_description_product" >
         <action
@@ -145,7 +145,7 @@
     </fragment>
     <fragment
         android:id="@+id/myCartFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.MyCartFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.my_cart.MyCartFragment"
         android:label="fragment_my_cart"
         tools:layout="@layout/fragment_my_cart" >
         <action
@@ -160,7 +160,7 @@
     </fragment>
     <fragment
         android:id="@+id/selectAddressFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.SelectAddressFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.selected_address.SelectAddressFragment"
         android:label="fragment_address"
         tools:layout="@layout/fragment_select_address" >
         <action
@@ -175,7 +175,7 @@
     </fragment>
     <fragment
         android:id="@+id/addAddressFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.AddAddressFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.add_address.AddAddressFragment"
         android:label="fragment_add_address"
         tools:layout="@layout/fragment_add_address" >
         <action
@@ -184,7 +184,7 @@
     </fragment>
     <fragment
         android:id="@+id/checkoutOrderFragment"
-        android:name="com.example.myshop.presentation.ui.fragments.CheckoutOrderFragment"
+        android:name="com.example.myshop.presentation.ui.fragments.checkout_orders.CheckoutOrderFragment"
         android:label="fragment_checkout_order"
         tools:layout="@layout/fragment_checkout_order" >
         <action
