--- a/app/src/main/res/layout/fragment_orders_details.xml
+++ b/app/src/main/res/layout/fragment_orders_details.xml
@@ -96,7 +96,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
-                        android:text="132424"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -114,7 +113,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:text="date"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvOrderId" />
 
@@ -133,7 +131,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
-                        android:text="Pending"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -156,20 +153,69 @@
 
                 </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvProducts"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint2"
                     android:layout_width="match_parent"
-                    android:layout_height="132dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_below="@id/linearLayout1"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/linearLayout1">
+
+                    <ImageView
+                        android:id="@+id/ivProduct"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_launcher_foreground" />
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="@+id/ivProduct"
+                        app:layout_constraintStart_toEndOf="@+id/ivProduct"
+                        app:layout_constraintTop_toTopOf="@+id/ivProduct">
+
+                        <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:text="My products"
+                            android:textColor="#373535"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tvPrice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1234" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tvQuantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:background="@drawable/item_border"
+                        android:padding="8dp"
+                        android:text="20"
+                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#B6B6B6"
-                    android:layout_below="@+id/rvProducts"
+                    android:layout_below="@+id/constraint2"
                     android:orientation="horizontal"
                     android:padding="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -196,37 +242,32 @@
                         android:id="@+id/tvNameAddress"
                         android:layout_width="wrap_content"
                         android:layout_margin="8dp"
-                        android:layout_height="wrap_content"
-                        android:text="Home" />
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/tvFullName"
                         android:layout_margin="8dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Ilya" />
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/tvMyAddressZip"
                         android:layout_margin="8dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1414fd, 1232" />
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/tvMyNote"
                         android:layout_margin="8dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Homefsdfsdfsd" />
+                        android:layout_height="wrap_content" />
 
 
                     <TextView
                         android:id="@+id/tv_phone_number"
                         android:layout_margin="8dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="123243432" />
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <LinearLayout
