--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -175,10 +175,10 @@
                     android:inputType="number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Products Quality">
+                    android:hint="Products Quantity">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etQuality"
+                        android:id="@+id/etQuantity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
