get currency from api

--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -96,7 +96,7 @@
             android:layout_weight="1"
             android:text="99$"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvErrorProduct" />
 
         <TextView
             android:id="@+id/tvSub"
@@ -106,7 +106,7 @@
             android:layout_marginTop="8dp"
             android:text="Subtotal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvErrorProduct" />
 
         <TextView
             android:id="@+id/textView8"
@@ -120,6 +120,27 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvShipping" />
+
+        <TextView
+            android:id="@+id/tvErrorProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            android:text="not enough products"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewZalupa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvShippingPrice"
+            app:layout_constraintStart_toEndOf="@+id/tvShipping"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
